--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,7 @@ jobs:
     test:
       name: test source
       runs-on: ubuntu-latest
+      needs: build
       steps:
         - name: execute tests
           run: |
