--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build k2eg with CMake
+name: Build and test
 on: 
   pull_request:
     types:
@@ -11,7 +11,6 @@ concurrency:
   cancel-in-progress: true
 jobs:
     build:
-      name: Build source
       runs-on: ubuntu-latest
       steps:
           - name: Checkout source code
@@ -26,7 +25,6 @@ jobs:
             run: |
               echo "Build source code"
     test:
-      name: test source
       runs-on: ubuntu-latest
       needs: build
       steps:
@@ -34,8 +32,7 @@ jobs:
           run: |
             echo "execute test"
     deploy:
-      name: Test Bullseye
-      needs: [] 
+      needs: [test] 
       uses: bisegni/test-deploy-workflow/.github/workflows/deploy.yml@main
       with:
         deploy-image: "image index"
