--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,35 +11,6 @@ concurrency:
   cancel-in-progress: true
 jobs:
     build:
-      runs-on: ubuntu-latest
-      steps:
-          - name: Checkout source code
-            uses: actions/checkout@v3
-          # - name: Restore cached build directory
-          #   id: cache-build-restore
-          #   uses: actions/cache@v3
-          #   with:
-          #     path: build
-          #     key: debian-bullseye-${{ hashFiles('CMakeLists.txt') }}
-          - name: build
-            run: |
-              echo "Build source code"
-    test:
-      runs-on: ubuntu-latest
-      needs: build
-      steps:
-        - name: execute tests
-          run: |
-            echo "execute test"
-    make-docker:
-      runs-on: ubuntu-latest
-      steps:
-        - run: |
-            echo "build docke image"
-    deploy:
-        name: update configuration project
-        runs-on: ubuntu-latest
-        steps:
-          - run: |
-              echo "patch configuration project"
+        uses: bisegni/test-deploy-workflow/.github/workflows/build.yml
+        secrets: inherit
 
