--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,6 @@ concurrency:
   cancel-in-progress: true
 jobs:
     build:
-        uses: bisegni/test-deploy-workflow/.github/workflows/build.yml
+        uses: bisegni/test-deploy-workflow/.github/workflows/build.yml@main
         secrets: inherit
 
